@@ -2,7 +2,7 @@
 
 /*  IIP fcgi server module - image processing routines
 
-    Copyright (C) 2004-2015 Ruven Pillay.
+    Copyright (C) 2004-2016 Ruven Pillay.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -88,8 +88,11 @@ void filter_normalize( RawTile& in, vector<float>& max, vector<float>& min ) {
     if( in.bpc == 32 && in.sampleType == FLOATINGPOINT ) {
       fptr = (float*)in.data;
       // Loop through our pixels for floating point pixels
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for
+#endif
       for( unsigned int n=c; n<np; n+=nc ){
         normdata[n] = isfinite(fptr[n])? (fptr[n] - minc) * invdiffc : 0.0;
       }
@@ -97,8 +100,11 @@ void filter_normalize( RawTile& in, vector<float>& max, vector<float>& min ) {
     else if( in.bpc == 32 && in.sampleType == FIXEDPOINT ) {
       uiptr = (unsigned int*)in.data;
       // Loop through our pixels for unsigned int pixels
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for
+#endif
       for( unsigned int n=c; n<np; n+=nc ){
         normdata[n] = (uiptr[n] - minc) * invdiffc;
       }
@@ -106,8 +112,11 @@ void filter_normalize( RawTile& in, vector<float>& max, vector<float>& min ) {
     else if( in.bpc == 16 ) {
       usptr = (unsigned short*)in.data;
       // Loop through our unsigned short pixels
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for
+#endif
       for( unsigned int n=c; n<np; n+=nc ){
         normdata[n] = (usptr[n] - minc) * invdiffc;
       }
@@ -115,8 +124,11 @@ void filter_normalize( RawTile& in, vector<float>& max, vector<float>& min ) {
     else {
       ucptr = (unsigned char*)in.data;
       // Loop through our unsigned char pixels
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for
+#endif
       for( unsigned int n=c; n<np; n+=nc ){
         normdata[n] = (ucptr[n] - minc) * invdiffc;
       }
@@ -176,8 +188,11 @@ void filter_shade( RawTile& in, int h_angle, int v_angle ){
   buffer = new float[ndata];
 
 
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for
+#endif
   for( unsigned int k=0; k<ndata; k++ ){
 
     unsigned int n = k*3;
@@ -308,8 +323,11 @@ void filter_LAB2sRGB( RawTile& in ){
   unsigned long np = in.width * in.height * in.channels;
 
   // Parallelize code using OpenMP
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for
+#endif
   for( unsigned long n=0; n<np; n+=in.channels ){
     unsigned char* ptr = (unsigned char*) in.data;
     unsigned char q[3];
@@ -339,7 +357,9 @@ void filter_cmap( RawTile& in, enum cmap_type cmap ){
 
   switch(cmap){
     case HOT:
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#endif
       for( int unsigned n=0; n<ndata; n+=in_chan, outv+=3 ){
         value = fptr[n];
         if(value>1.)
@@ -356,7 +376,9 @@ void filter_cmap( RawTile& in, enum cmap_type cmap ){
       }
       break;
     case COLD:
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#endif
       for( unsigned int n=0; n<ndata; n+=in_chan, outv+=3 ){
         value = fptr[n];
         if(value>1.)
@@ -373,7 +395,9 @@ void filter_cmap( RawTile& in, enum cmap_type cmap ){
       }
       break;
     case JET:
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#endif
       for( unsigned int n=0; n<ndata; n+=in_chan, outv+=3 ){
         value = fptr[n];
         if(value<0.)
@@ -412,8 +436,11 @@ void filter_inv( RawTile& in ){
   float *infptr = (float*) in.data;
 
   // Loop through our pixels for floating values
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for
+#endif
   for( unsigned int n=0; n<np; n++ ){
     float v = infptr[n];
     infptr[n] = 1.0 - v;
@@ -495,8 +522,11 @@ void filter_interpolate_bilinear( RawTile& in, unsigned int resampled_width, uns
 
 
   // Do not parallelize for small images (256x256 pixels) as this can be slower that single threaded
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for if( resampled_width*resampled_height > PARALLEL_THRESHOLD )
+#endif
   for( unsigned int j=0; j<resampled_height; j++ ){
 
     // Index to the current pyramid resolution's top left pixel
@@ -555,8 +585,11 @@ void filter_contrast( RawTile& in, float c ){
   unsigned char* buffer = new unsigned char[np];
   float* infptr = (float*)in.data;
 
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for
+#endif
   for( unsigned int n=0; n<np; n++ ){
     float v = infptr[n] * 255.0 * c;
     buffer[n] = (unsigned char)( (v<255.0) ? (v<0.0? 0.0 : v) : 255.0 );
@@ -580,8 +613,11 @@ void filter_gamma( RawTile& in, float g ){
   float* infptr = (float*)in.data;
 
   // Loop through our pixels for floating values
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for
+#endif
   for( unsigned int n=0; n<np; n++ ){
     float v = infptr[n];
     infptr[n] = powf( v<0.0 ? 0.0 : v, g );
@@ -604,8 +640,11 @@ void filter_rotate( RawTile& in, float angle=0.0 ){
 
     // Rotate 90
     if( (int) angle % 360 == 90 ){
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for if( in.width*in.height > PARALLEL_THRESHOLD )
+#endif
       for( unsigned int i=0; i < in.width; i++ ){
 	unsigned int n = i*in.height*in.channels;
 	for( int j=in.height-1; j>=0; j-- ){
@@ -619,8 +658,11 @@ void filter_rotate( RawTile& in, float angle=0.0 ){
 
     // Rotate 270
     else if( (int) angle % 360 == 270 ){
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for if( in.width*in.height > PARALLEL_THRESHOLD )
+#endif
       for( int i=in.width-1; i>=0; i-- ){
 	unsigned int n = i*in.height*in.channels;
 	for( unsigned int j=0; j < in.height; j++ ){
@@ -637,7 +679,7 @@ void filter_rotate( RawTile& in, float angle=0.0 ){
       for( int i=(in.width*in.height)-1; i >= 0; i-- ){
 	unsigned index = i * in.channels;
 	for( int k=0; k < in.channels; k++ ){
-	  ((unsigned char*)buffer)[n++]  = ((unsigned char*)in.data)[index+k];
+	  ((unsigned char*)buffer)[n++] = ((unsigned char*)in.data)[index+k];
 	}
       }
     }
@@ -671,8 +713,11 @@ void filter_greyscale( RawTile& rawtile ){
 
   // Calculate using fixed-point arithmetic
   //  - benchmarks to around 25% faster than floating point
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#else
 #pragma omp parallel for if( rawtile.width*rawtile.height > PARALLEL_THRESHOLD )
+#endif
   for( unsigned int i=0; i<np; i++ ){
     unsigned int n = i*rawtile.channels;
     unsigned char R = ((unsigned char*)rawtile.data)[n++];
@@ -764,16 +809,19 @@ void filter_flatten( RawTile& in, int bands ){
 
 
 
+
 // Flip image in horizontal or vertical direction (0=horizontal,1=vertical)
 void filter_flip( RawTile& rawtile, int orientation ){
 
   unsigned char* buffer = new unsigned char[rawtile.width * rawtile.height * rawtile.channels];
-  unsigned long n = 0;
 
   // Vertical
   if( orientation == 2 ){
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for if( rawtile.width*rawtile.height > PARALLEL_THRESHOLD )
+#endif
     for( int j=rawtile.height-1; j>=0; j-- ){
       unsigned long n = j*rawtile.width*rawtile.channels;
       for( unsigned int i=0; i<rawtile.width; i++ ){
@@ -786,8 +834,11 @@ void filter_flip( RawTile& rawtile, int orientation ){
   }
   // Horizontal
   else{
+#if defined(__ICC) || defined(__INTEL_COMPILER)
 #pragma ivdep
+#elif defined(_OPENMP)
 #pragma omp parallel for if( rawtile.width*rawtile.height > PARALLEL_THRESHOLD )
+#endif
     for( unsigned int j=0; j<rawtile.height; j++ ){
       unsigned long n = j*rawtile.width*rawtile.channels;
       for( int i=rawtile.width-1; i>=0; i-- ){
